# Monitor

./: 1.cpp  CMakeLists.txt  README.md
include/: MonitorGroup.h  ProgramMonitor.h
include/color/: color.h  color_in_windows.h
include/subprocess/: fork_in_windows.h
include/tools/: LoggerManager.h  SimpleLogger.h  Timetools.h  color.h
src/: MonitorGroup.cpp  ProgramMonitor.cpp  test.cpp
src/color/: color.cpp  color_in_windows.cpp
